# chess-rs

./: .gitignore  Cargo.toml  LICENSE
src/: ai.rs  bitboard.rs  board.rs  elo.rs  main.rs  moves.rs  piece.rs  player.rs  pos.rs
