[package]
name = "chess-rs"
version = "0.1.0"
authors = ["gan74"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.8"

[profile.release]
opt-level = 3